--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue-board-component",
-  "version": "0.2.1",
+  "main": "src/index.js",
+  "version": "0.2.2",
   "author": "dhsimpson <qeadzc9503@naver.com>",
   "license": "MIT",
   "repository": {
