--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-board-component",
   "main": "src/index.js",
-  "version": "0.2.4",
+  "version": "0.2.4-1",
   "author": "dhsimpson <qeadzc9503@naver.com>",
   "license": "MIT",
   "repository": {
