--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bugs": {"url": "https://github.com/dhsimpson/vue-board-component/issues"},
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vite build && vue-tsc --emitDeclarationOnly",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -20,6 +20,11 @@
     "vue": "^3.2.13"
   },
   "devDependencies": {
+    "@types/node": "^18.7.14",
+    "@vitejs/plugin-vue": "^2.3.4",
+    "rollup-plugin-typescript2": "^0.33.0",
+    "vite": "^2.9.15",
+    "vue-tsc": "^0.40.5",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
